# ai

./: .gitignore  .pre-commit-config.yaml  README.md  commands  data_analyst_agent.py  pandas_dataframe_agent.py  pyproject.toml
.github/: copilot-instructions.md
agentic_rag/: adaptive_rag.ipynb  corrective_rag.ipynb
langgraph_agents/: data_analyst_agent.py  pandas_dataframe_agent.py  router_query_classifier_agent.py
rag/: corrective_rag.ipynb  pg_vector_stores.py
